# kn86-ui

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml
docs/: character-set.md  component-kit.md  index.mdx  screen-design-rules.md  screen-dsl.md  ui-design-language.md  ui-patterns.md
docs/plans/: 2026-06-16-ui-render-engine-design.md
examples/: contract-board.lsp  ice-breaker.lsp
harness/: cell_api.c  cell_api.h  font.c  font.h  phosphor.c  render.c  render.h  render.lsp  sys_context.h
preview/: server.mjs
tests/: kn86_test.h  test_ui_frames.c  test_ui_input.c  test_ui_lists_data.c  ui_golden.h
tools/: render_screen.c
ui/: compositing.lsp  data.lsp  frames.lsp  glyphs.lsp  input.lsp  lists.lsp  screen.lsp
website/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
website/src/: content.config.ts
website/src/styles/: kec.css
